@@ -988,6 +988,7 @@ config side_engine::new_config() const
 		// Merge the faction data to res.
 		config faction = flg_.current_faction();
 		res["faction_name"] = faction["name"];
+		res["faction_id"] = faction["id"];
 		faction.remove_attributes("id", "name", "image", "gender", "type");
 		res.append(faction);
 	}
