@@ -83,6 +83,8 @@ team::team_info::team_info() :
 	team_name(),
 	user_team_name(),
 	side_name(),
+	faction(),
+	faction_name(),
 	save_id(),
 	current_player(),
 	countdown_time(),
@@ -122,6 +124,8 @@ void team::team_info::read(const config &cfg)
 	team_name = cfg["team_name"].str();
 	user_team_name = cfg["user_team_name"];
 	side_name = cfg["side_name"];
+	faction = cfg["faction_id"].str();
+	faction_name = cfg["faction_name"];
 	save_id = cfg["save_id"].str();
 	current_player = cfg["current_player"].str();
 	countdown_time = cfg["countdown_time"].str();
@@ -239,6 +243,8 @@ void team::team_info::write(config& cfg) const
 	cfg["team_name"] = team_name;
 	cfg["user_team_name"] = user_team_name;
 	cfg["side_name"] = side_name;
+	cfg["faction_id"] = faction;
+	cfg["faction_name"] = faction_name;
 	cfg["save_id"] = save_id;
 	cfg["current_player"] = current_player;
 	cfg["flag"] = flag;
